--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 @font-face {
   font-family: Rubik;
   src: url('../fonts/Rubik-Regular.ttf');
@@ -11,4 +15,8 @@
 
 body {
   font-family: Rubik;
+}
+
+img {
+  height: 52px;
 }
