--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,22 @@
+/* Hero Section */
+.hero-section {
+  background: #ffffff;
+  padding: 9.6rem 0;
+}
+
 .hero {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 9.6rem;
+  gap: 7rem;
+  align-items: center;
 }
 
 .hero-img {
-    width: 100%;
+  width: 100%;
+}
+
+.hero-textbox {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
 }
