--- a/css/general.css
+++ b/css/general.css
@@ -28,11 +28,13 @@ body {
   font-size: 4rem;
   line-height: 1.1;
   font-weight: 700;
+  margin-bottom: 3rem;
 }
 
 .hero-description {
   font-size: 2rem;
   line-height: 1.6;
+  margin-bottom: 4.8rem;
 }
 
 .btn:link,
