--- a/css/general.css
+++ b/css/general.css
@@ -34,7 +34,7 @@ body {
 .hero-description {
   font-size: 2rem;
   line-height: 1.6;
-  margin-bottom: 4.8rem;
+  margin-bottom: 4rem;
 }
 
 .btn:link,
@@ -45,6 +45,7 @@ body {
   font-weight: 600;
   padding: 1.6rem 3.2rem;
   border-radius: 0.9rem;
+  display: inline-block;
   transition: all 0.3s;
 }
 
@@ -64,6 +65,7 @@ body {
 .btn.btn--full:visited {
   color: #fbf3ef;
   background: #343a40;
+  margin-right: 1.5rem;
 }
 
 .btn.btn--full:hover,
