--- a/css/general.css
+++ b/css/general.css
@@ -72,3 +72,11 @@ body {
 .btn.btn--full:active {
   background: #495057;
 }
+
+.grid {
+  display: grid;
+}
+
+.grid-4-col {
+  grid-template-columns: repeat(4, 1fr);
+}
