--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,16 @@
+/* Header / Navigation */
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 4rem;
+  align-items: center;
+}
+
+
 /* Hero Section */
 .hero-section {
   background: #ffffff;
-  padding: 9.6rem 0;
+  padding: 4.8rem 0 9.6rem 0;
 }
 
 .hero {
@@ -15,6 +24,6 @@
   width: 100%;
 }
 
-.hero-name{
+.hero-name {
   font-weight: 600;
 }
