--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,42 @@
 .header {
   display: flex;
   justify-content: space-between;
+  height: 9.6rem;
   padding: 0 4rem;
   align-items: center;
 }
 
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  gap: 4rem;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  text-decoration: none;
+  color: inherit;
+  font-size: 1.8rem;
+  font-weight: 600;
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #6c757d;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 0.9rem;
+  background: #343a40;
+  color: #fff;
+}
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background: #6c757d;
+}
 
 /* Hero Section */
 .hero-section {
