--- a/css/general.css
+++ b/css/general.css
@@ -24,6 +24,12 @@ body {
   padding: 0 3.2rem;
 }
 
+.md-container {
+  max-width: 90rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+}
+
 .heading-primary {
   font-size: 4rem;
   line-height: 1.1;
@@ -31,10 +37,9 @@ body {
   margin-bottom: 3rem;
 }
 
-.hero-description {
-  font-size: 2rem;
-  line-height: 1.6;
-  margin-bottom: 4rem;
+.heading-secondary {
+  font-size: 3.5rem;
+  margin-bottom: 1.6rem;
 }
 
 .btn:link,
