--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,6 @@
   background: #6c757d;
 }
 
-
 /* Hero Section */
 .hero-section {
   background: #ffffff;
@@ -53,10 +52,32 @@
   align-items: center;
 }
 
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.6;
+  margin-bottom: 4rem;
+}
+
 .hero-img {
   width: 100%;
 }
 
 .hero-name {
   font-weight: 600;
+}
+
+/* Showcase Section */
+.showcase-section {
+  padding: 4.8rem 0 9.6rem 0;
+  background: #fdfffc;
+}
+
+.showcase-textbox {
+  text-align: center;
+  margin-bottom: 9.6rem;
+}
+
+.showcase-text {
+  font-size: 1.8rem;
+  line-height: 1.6;
 }
