--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@
 }
 
 .hero-description {
-  font-size: 2rem;
+  font-size: 1.9rem;
   line-height: 1.6;
   margin-bottom: 4rem;
 }
@@ -80,4 +80,14 @@
 .showcase-text {
   font-size: 1.8rem;
   line-height: 1.6;
+}
+
+.cards {
+  gap: 3rem;
+}
+
+.card {
+  text-align: center;
+  padding: 3rem;
+  box-shadow: 0 0 0 1px #e9ebec;
 }
