--- a/css/general.css
+++ b/css/general.css
@@ -42,6 +42,11 @@ body {
   margin-bottom: 1.6rem;
 }
 
+.heading-tertiary {
+  font-size: 2.4rem;
+  margin-bottom: 2rem;
+}
+
 .btn:link,
 .btn:visited {
   text-decoration: none;
