--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,8 @@
   text-align: center;
   padding: 3rem;
   box-shadow: 0 0 0 1px #e9ebec;
+  border-bottom: 3px solid #6c757d;
+  border-radius: 0.5rem;
 }
 
 .card-text {
