--- a/css/style.css
+++ b/css/style.css
@@ -124,3 +124,18 @@
 .courses-textbox {
   padding: 0 3rem;
 }
+
+.courses {
+  gap: 4rem;
+}
+
+.course {
+  padding: 4rem 3rem;
+  box-shadow: 0 0 0 1px #e9ebec;
+  border-bottom: 7px solid #6c757d;
+  border-radius: 0.9rem;
+}
+
+.course-img {
+  width: 100%;
+}
