--- a/css/style.css
+++ b/css/style.css
@@ -130,12 +130,16 @@
 }
 
 .course {
-  padding: 4rem 3rem;
   box-shadow: 0 0 0 1px #e9ebec;
   border-bottom: 7px solid #6c757d;
   border-radius: 0.9rem;
+  overflow: hidden;
 }
 
 .course-img {
   width: 100%;
+}
+
+.course-description {
+  padding: 4rem 3rem;
 }
