--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,6 @@
 
 .cards {
   gap: 3rem;
-  /* padding: 0 3rem; */
 }
 
 .card {
@@ -134,6 +133,7 @@
   border-bottom: 7px solid #6c757d;
   border-radius: 0.9rem;
   overflow: hidden;
+  padding: 1rem;
 }
 
 .course-img {
