--- a/css/style.css
+++ b/css/style.css
@@ -117,15 +117,15 @@
 
 /* Courses Section */
 .courses-section {
-  padding: 9.6rem 0;
+  padding: 6.8rem 0 9.6rem 0;
 }
 
 .courses-textbox {
-  /* padding: 0 3rem; */
+  padding-bottom: 3rem;
 }
 
 .courses {
-  gap: 4rem;
+  gap: 2rem;
 }
 
 .course {
@@ -133,7 +133,7 @@
   border-bottom: 7px solid #6c757d;
   border-radius: 0.9rem;
   overflow: hidden;
-  padding: 1rem;
+  padding: 0.5rem;
 }
 
 .course-img {
@@ -141,5 +141,10 @@
 }
 
 .course-description {
-  padding: 4rem 3rem;
+  padding: 0.5rem 1.5rem;
+  text-align: center;
+}
+
+.course-cta {
+  margin: 1rem 0;
 }
