--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,7 @@
 .course {
   box-shadow: 0 0 0 1px #e9ebec;
   border-bottom: 7px solid #6c757d;
+  /* box-shadow: inset 0 0 0 2px #6c757d; */
   border-radius: 0.9rem;
   /* overflow: hidden; */
   padding: 0.5rem;
@@ -142,10 +143,12 @@
   top: 0;
   transform: translateX(100%);
   z-index: 1;
-  background: #fbf3ef;
+  color: #fbf3ef;
+  background: #495057;
   padding: 1.5rem;
   height: 100%;
   width: 105%;
+  border-radius: 0.9rem;
 }
 
 .outcome-list {
