--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@
 
 .course {
   box-shadow: 0 0 0 1px #e9ebec;
-  border-bottom: 7px solid #6c757d;
+  border-bottom: 0.5rem solid #495057;
   /* box-shadow: inset 0 0 0 2px #6c757d; */
   border-radius: 0.9rem;
   /* overflow: hidden; */
