--- a/css/general.css
+++ b/css/general.css
@@ -106,6 +106,10 @@ body {
   display: grid;
 }
 
+.grid-2-col {
+  grid-template-columns: repeat(2, 1fr);
+}
+
 .grid-4-col {
   grid-template-columns: repeat(4, 1fr);
 }
