--- a/css/style.css
+++ b/css/style.css
@@ -209,3 +209,17 @@
   padding-top: 2rem;
   padding-left: 1rem;
 }
+
+/* About Us Section */
+.about-us-section {
+  padding: 4.8rem 0 9.6rem 0;
+}
+
+.gallery {
+  gap: 1.5rem;
+}
+
+svg {
+  width: 100%;
+  height: 100%;
+}
