--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@
 }
 
 .course-cta {
-  margin: 1rem 0;
+  margin: 2rem 0;
 }
 
 /* Testimony Section */
@@ -219,7 +219,16 @@
   gap: 1.5rem;
 }
 
+.img-box {
+  overflow: hidden;
+}
+
 svg {
   width: 100%;
   height: 100%;
+  transition: all 0.3s;
+}
+
+svg:hover {
+  transform: scale(1.2);
 }
