--- a/css/style.css
+++ b/css/style.css
@@ -127,11 +127,15 @@
 .course {
   box-shadow: 0 0 0 1px #e9ebec;
   border-bottom: 0.5rem solid #495057;
-  /* box-shadow: inset 0 0 0 2px #6c757d; */
   border-radius: 0.9rem;
-  /* overflow: hidden; */
   padding: 0.5rem;
   position: relative;
+  transition: all 0.3s;
+}
+
+.course:hover {
+  transform: translateY(-1rem);
+  z-index: 2;
 }
 
 .outcome {
@@ -217,6 +221,7 @@
 
 .gallery {
   gap: 1.5rem;
+  margin-bottom: 7rem;
 }
 
 .img-box {
